examples/test/testpolicy8676.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8676
  namespace: namespace36
spec:
  podSelector:
    matchLabels:
      key0: value6
      key29: value25
      key12: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value27
          key42: value37
          key14: value15
      podSelector:
        matchLabels:
          key4: value17
          key18: value34
          key31: value26
